# Ansible_docker_integration

./: .gitignore  README.md  Vagrantfile  pyproject.toml  run.sh
.github/workflows/: main.yml
ansible/templates/: docker.j2
src/ansible/: requirements.yml
src/ansible/hosts/: server.yml  swarm_cluster
src/ansible/playbooks/: setup_docker.yml
